--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     name: "Build"
     needs: approval-gate
-    environment: ${{ github.event.input.environment }}
+    environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{ secrets.BUILD_SECRET }}" | base64
@@ -24,7 +24,7 @@ jobs:
   deploy:
     name: "Deploy"
     needs: build
-    environment: ${{ github.event.input.environment }}
+    environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{ secrets.DEPLOY_SECRET }}" | base64
